fix card text visibility

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -48,7 +48,9 @@
   --color-light: #dbe1e8;
   --color-shadow: #666666;
 
-  --color-ocu-back:  rgba(254, 254, 254, 0.6);
+  .card{
+    color: var(--color-primary);
+  }
 }
 
 // mixin
@@ -122,7 +124,7 @@ h2{
     font-size: 1.8rem;
   }  
   @include for-desktop(){
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 }
 
