--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -203,6 +203,7 @@
   width: 100%;
   height: 350px;
   margin: 2rem 0;
+  
     
   .card-image img{
     width: 100%;
@@ -222,7 +223,6 @@
           color: var(--color-accent);
           padding: .5rem 0;
           text-align: start;
-          text-shadow: 1px 1px 1px var(--color-secondary);
       }  
   }
 
@@ -245,7 +245,6 @@
       align-items: center;
       border-radius: 50px;
       margin: .5rem;
-      
       color: var(--color-primary);
       @include shadow-effect (out,1px);
       background-color: var(--color-accent);
